# indec-data-catalog

./: README.md  example.ipynb  pyproject.toml
.github/workflows/: generate_catalog.yml
data/: catalogo_indec.json
indec_catalog/: __init__.py  bases_datos.py  catalog.py  cli.py  config.py  models.py  parser.py  scraper.py  sitemap.py
legacy/: cuadros_estadisticos.py
tests/: __init__.py  test_bases_datos.py  test_catalog.py  test_parser.py  test_scraper.py  test_sitemap.py
