[project]
name = "indec-data-catalog"
version = "0.1.0"
description = "Catálogo automatizado de fuentes de datos públicas del INDEC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "lxml>=4.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indec_catalog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=indec_catalog --cov-report=term-missing"

